# contExt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build-macos.sh  build.cmd  build.sh  callbacks.py  contourExtraction.py  generate_requirements_txt.sh  interface.py  main.py  mesh.py  outputCtoMesh.txt  outputInterpToMesh.txt  pixel.py  processaMalha.py  pyproject.toml  requirements.txt  sparseMesh.py  tecnica.md  teste-data.txt  textureTest.py
.github/workflows/: release.yml
callbacks/: __init__.py  _blocks.py  _contourExtraction.py  _imageProcessing.py  _interpolation.py  _mesh.py  _meshGeneration.py  _scopeList.py  _sparseMesh.py  _texture.py
images/: 541722628.dcm  teste.ctxp
interface/: __init__.py  _extractionTab.py  _filteringTab.py  _interpolationTab.py  _meshTab.py  _processingTab.py  _theme.py  _thresholdingTab.py
packaging/pyinstaller/: ContExt.spec
src/context/: __init__.py  __main__.py  app.py  localization.py  meta.py  paths.py  preferences.py
src/context/core/: __init__.py  _blocks.py  _contourExtraction.py  _fdm.py  _imageProcessing.py  _interpolation.py  _mesh.py  _meshGeneration.py  _scopeList.py  _simulation.py  _sparseMesh.py  _texture.py
src/context/ui/: __init__.py  _extractionTab.py  _filteringTab.py  _frequencyTab.py  _interpolationTab.py  _meshTab.py  _processingTab.py  _simulationTab.py  _theme.py  _thresholdingTab.py  strings.py  translations.json
tests/: test_app_startup.py  test_fdm.py  test_filter_node_catalog.py  test_frequency_processing.py  test_graph_scene.py  test_graph_viewmodel.py  test_histogram_processing.py  test_pipeline_core.py  test_pipeline_serialization.py  test_preferences_localization.py  test_simulation_export.py  test_ui_smoke.py
(+28 files in other folders)
